# fast-api-blog

./: README.md  pyproject.toml  webtronics.db
alembic/versions/: 4b66f06e78a8_added_models.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: activity.py  post.py
app/core/: config.py
app/crud/: __init__.py  crud_activity.py  crud_post.py
app/db/: base.py  init_db.py
app/models/: post.py  user.py
app/schemas/: activity.py  post.py
